Fix bug #66588: SplFileObject::fgetcsv incorrectly returns a row on premature EOF

Make sure the behavior is the same regardless of whether there is
a trailing newline and whether the input is a stream or not.

Closes GH-7539.